# Smart-Library

./: .pre-commit-config.yaml  README.md  auth.py  books_crud.py  config.ini  dataset_into_db.py  main.py  memory.db  pyproject.toml  smart-library-postgres  test_main.py
app/: chromavdb.py  streamlitt.py
app/Books/: BooksCRUD.py  BooksModel.py  BooksRouter.py  BooksServices.py  books_crud.py  books_model.py  books_router.py  books_schema.py  books_services.py
app/Logs/: LogsModel.py  LogsSchema.py  logs_model.py  logs_router.py  logs_schema.py
app/authors/: AuthorsCRUD.py  AuthorsRouter.py  AuthorsSchema.py  authors_crud.py  authors_model.py  authors_router.py  authors_schema.py
app/common/Books/: BooksCRUD.py  BooksModel.py  BooksRouter.py  BooksSchema.py  BooksServices.py  models.py  schemas.py
app/common/Logs/: LogsModel.py  LogsRouter.py  LogsSchema.py
app/user/: UserCRUD.py  UserRouter.py  UserSchema.py  user_crud.py  user_model.py  user_router.py  user_schema.py
chromadb/: chroma.sqlite3
chromadb/4fb4ff66-1019-40a8-ac3a-f3645cd8cb52/: index_metadata.pickle
fe/: index.html  scripts.js
fe/css/: styles.css
fe2/: package-lock.json  package.json
fe2/src/: App.css  App.jsx
front/: task.html
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend_integration/: package-lock.json  package.json
frontend_integration/src/: App.module.css  App.tsx  index.tsx
react-front/: package-lock.json  package.json
react-front/src/: App.css  App.jsx  BookCard.css
(+72 files in other folders)
