[tool.poetry]
name = "smart library"
version = "0.1.0"
description = ""
authors = ["Yasser AlRuwaiti <Yasser.alruwaiti@pwc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
