[tool.poetry]
name = "smart library"
version = "0.1.0"
description = ""
authors = ["Yasser AlRuwaiti <Yasser.alruwaiti@pwc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
pyproject = "^1.3.1"
pre-commit = "^3.7.1"
psycopg2-binary = "^2.9.9"
chromadb = "^0.5.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
